@@ -1,7 +1,8 @@
 2008-05-25  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
 	* src/native_effects/PicmixEffect.cpp: stub now reads 
-	configuration, still a stub though.
+	configuration, and single image overlays.   Still just a
+	stub though.
 
 2008-05-24  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
